<resources>
    <string name="app_name">AD Puls</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_data">add new data</string>
    <string name="button_text">Отправить</string>
    <string name="intro">Введите резултат измерения артериального дваления и пульса</string>
    <string name="blood_pressure">Давление</string>
    <string name="pulse">Пульс</string>
    <string name="hint_pressure">120/80</string>
    <string name="hint_pulse">70</string>
</resources>