<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdValueFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_pressure"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/blood_pressure_box"
        app:layout_constraintEnd_toEndOf="@+id/blood_pressure_box"
        app:layout_constraintStart_toStartOf="@+id/blood_pressure_box" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulse"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pulse_box"
        app:layout_constraintEnd_toEndOf="@+id/pulse_box"
        app:layout_constraintStart_toStartOf="@+id/pulse_box" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blood_pressure_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pulse_box"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blood_pressure_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pressure" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pulse_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/blood_pressure_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pulse_input"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:hint="@string/hint_pulse" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_pressure_box" />

</androidx.constraintlayout.widget.ConstraintLayout>